--- a/simlane/templates/socialaccount/snippets/login.html
+++ b/simlane/templates/socialaccount/snippets/login.html
@@ -5,7 +5,7 @@
 {% get_providers as socialaccount_providers %}
 {% if socialaccount_providers %}
   {% if not SOCIALACCOUNT_ONLY %}
-    <div class="divider divider-neutral"></div>
+    <div class="border-t border-gray-200 my-6"></div>
     <h2 class="my-3 text-sm">{% translate "Or use a third-party" %}</h2>
   {% endif %}
   {% include "socialaccount/snippets/provider_list.html" with process="login" %}
