--- a/simlane/templates/account/base_manage_password.html
+++ b/simlane/templates/account/base_manage_password.html
@@ -1,8 +1,8 @@
 {% extends "account/base_manage.html" %}
 
 {% block main %}
-  <div class="card">
-    <div class="card-body">
+  <div class="bg-white rounded-lg shadow-sm border border-gray-200 p-6">
+    <div>
       {% block content %}
       {% endblock content %}
     </div>
