--- a/simlane/templates/account/base_reauthenticate.html
+++ b/simlane/templates/account/base_reauthenticate.html
@@ -12,7 +12,7 @@
   {% block reauthenticate_content %}
   {% endblock reauthenticate_content %}
   {% if reauthentication_alternatives %}
-    <div class="divider divider-neutral"></div>
+    <div class="border-t border-gray-200 my-6"></div>
     <h2 class="text-lg my-3">{% translate "Alternative options" %}</h2>
     <ul>
       {% for alt in reauthentication_alternatives %}
