--- a/simlane/templates/allauth/elements/alert.html
+++ b/simlane/templates/allauth/elements/alert.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 {% load allauth %}
 
-<div class="alert alert-error">
+<div class="bg-red-50 border border-red-200 text-red-800 px-4 py-3 rounded-md">
   {% slot message %}
 {% endslot %}
 </div>
