--- a/simlane/templates/allauth/elements/badge.html
+++ b/simlane/templates/allauth/elements/badge.html
@@ -1,6 +1,6 @@
 {% load allauth %}
 
-<span class="badge {% if 'success' in attrs.tags %}bg-success{% endif %} {% if 'warning' in attrs.tags %}bg-warning{% endif %} {% if 'secondary' in attrs.tags %}bg-secondary{% endif %} {% if 'danger' in attrs.tags %}bg-danger{% endif %} {% if 'primary' in attrs.tags %}bg-primary{% endif %}">
+<span class="inline-flex items-center px-2 py-1 rounded-full text-xs font-medium {% if 'success' in attrs.tags %}bg-green-100 text-green-800{% endif %} {% if 'warning' in attrs.tags %}bg-orange-100 text-orange-800{% endif %} {% if 'secondary' in attrs.tags %}bg-gray-100 text-gray-800{% endif %} {% if 'danger' in attrs.tags %}bg-red-100 text-red-800{% endif %} {% if 'primary' in attrs.tags %}bg-blue-100 text-blue-800{% endif %}">
   {% slot %}
 {% endslot %}
 </span>
