--- a/simlane/templates/allauth/elements/button.html
+++ b/simlane/templates/allauth/elements/button.html
@@ -6,13 +6,13 @@
                       {% if attrs.id %}id="{{ attrs.id }}"{% endif %}
                       {% if attrs.name %}name="{{ attrs.name }}"{% endif %}
                       {% if attrs.type %}type="{{ attrs.type }}"{% endif %}
-                      class="btn
-{% if 'success' in attrs.tags %}btn-success
-{% elif 'warning' in attrs.tags %}btn-warning
-{% elif 'secondary' in attrs.tags %}btn-secondary
-{% elif 'danger' in attrs.tags %}btn-danger
-{% elif 'primary' in attrs.tags %}btn-primary
-{% else %}btn-primary
+                                              class="inline-flex items-center px-4 py-2 font-medium rounded-md transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2
+{% if 'success' in attrs.tags %}bg-green-600 hover:bg-green-700 text-white
+{% elif 'warning' in attrs.tags %}bg-orange-600 hover:bg-orange-700 text-white
+{% elif 'secondary' in attrs.tags %}bg-gray-600 hover:bg-gray-700 text-white
+{% elif 'danger' in attrs.tags %}bg-red-600 hover:bg-red-700 text-white
+{% elif 'primary' in attrs.tags %}bg-blue-600 hover:bg-blue-700 text-white
+{% else %}bg-blue-600 hover:bg-blue-700 text-white
 {% endif %}"
 >
   {% slot %}
