--- a/simlane/templates/components/form.html
+++ b/simlane/templates/components/form.html
@@ -18,6 +18,9 @@
   {% endif %}
   {{ children }}
   {% if use_default_button == "true" %}
-    <button type="submit" class="my-3 btn btn-primary">{{ button_text }}</button>
+    <button type="submit"
+            class="my-3 inline-flex items-center px-6 py-3 bg-blue-600 hover:bg-blue-700 text-white font-medium rounded-md transition-colors focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2">
+      {{ button_text }}
+    </button>
   {% endif %}
 </form>
